# pleb

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  coverage.txt  energy.csv  flake.nix  readme.md  run.sh  setup.sh  shell.nix
benchmarks/: gen-input.sh
benchmarks/Ada/binary-trees/: Makefile
benchmarks/Ada/fasta/: Makefile
benchmarks/Ada/k-nucleotide/: Makefile
benchmarks/Ada/regex-redux/: Makefile
benchmarks/Ada/reverse-complement/: Makefile
benchmarks/C++/binary-trees/: Makefile
benchmarks/C++/chameneos-redux/: Makefile
benchmarks/C++/fannkuch-redux/: Makefile  fannkuchredux.gpp-5.gpp_run
benchmarks/C++/fasta/: Makefile
benchmarks/C++/k-nucleotide/: Makefile
benchmarks/C++/mandelbrot/: Makefile
benchmarks/C++/n-body/: Makefile
benchmarks/C++/pidigits/: Makefile
benchmarks/C++/regex-redux/: Makefile
benchmarks/C++/reverse-complement/: Makefile
benchmarks/C++/spectral-norm/: Makefile
benchmarks/C/binary-trees/: Makefile
benchmarks/C/chameneos-redux/: Makefile
benchmarks/C/fannkuch-redux/: Makefile
benchmarks/C/fasta/: Makefile
benchmarks/C/k-nucleotide/: Makefile
benchmarks/C/mandelbrot/: Makefile
benchmarks/C/n-body/: Makefile
benchmarks/C/pidigits/: Makefile
benchmarks/C/regex-redux/: Makefile
benchmarks/C/reverse-complement/: Makefile
benchmarks/C/spectral-norm/: Makefile
benchmarks/CSharp/binary-trees/: Makefile
benchmarks/CSharp/chameneos-redux/: Makefile
benchmarks/Go/fasta/: Makefile  (+1 more)
benchmarks/TypeScript/: package-lock.json  package.json
broken_benchmarks/: broken.list
broken_benchmarks/C/: Makefile
src/: app.rs  benchmark.rs  debug.rs  event.rs  handler.rs  main.rs  metrics.rs  sources.rs  ui.rs
src/linux/: benchmark.rs  metrics.rs  mod.rs
src/macos/: benchmark.rs  metrics.rs  mod.rs  sources.rs
(+230 files in other folders)
