[package]
name = "thesis"
version = "0.0.0"
edition = "2021"

[lints.rust]
non_camel_case_types = "allow"
unused_assignments = "allow"
unreachable_code = "allow"

[profile.release]
panic = "abort"
strip = false

[dependencies]
cfg = "0.9.0"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
core-foundation = "0.10.0"
csv = "1.3.1"
libc = "0.2.161"
serde = { version = "1.0.216", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
powercap = "0.3.5"
